--- a/laporanpemakaian_30.rdlc
+++ b/laporanpemakaian_30.rdlc
@@ -170,7 +170,7 @@
         <rd:TableAdapterName>sp_LaporanPemakaianMaterialTableAdapter</rd:TableAdapterName>
       </rd:DataSetInfo>
     </DataSet>
-    <DataSet Name="datasetjumlahpengiriman">
+    <DataSet Name="datasetjumlahperbaikan">
       <Query>
         <DataSourceName>PengirimanForm</DataSourceName>
         <CommandText>/* Local Query */</CommandText>
@@ -310,12 +310,12 @@
         </Field>
       </Fields>
       <rd:DataSetInfo>
-        <rd:DataSetName>PengirimanForm</rd:DataSetName>
-        <rd:SchemaPath>E:\GitHub\GOS_FxApps\DataSet\PengirimanForm.xsd</rd:SchemaPath>
-        <rd:TableName>sp_LaporanPengiriman</rd:TableName>
+        <rd:DataSetName>PerbaikanForm</rd:DataSetName>
+        <rd:SchemaPath>E:\GitHub\GOS_FxApps\DataSet\PerbaikanForm.xsd</rd:SchemaPath>
+        <rd:TableName>sp_LaporanPerbaikan</rd:TableName>
         <rd:TableAdapterFillMethod>Fill</rd:TableAdapterFillMethod>
         <rd:TableAdapterGetDataMethod>GetData</rd:TableAdapterGetDataMethod>
-        <rd:TableAdapterName>sp_LaporanPengirimanTableAdapter</rd:TableAdapterName>
+        <rd:TableAdapterName>sp_LaporanPerbaikanTableAdapter</rd:TableAdapterName>
       </rd:DataSetInfo>
     </DataSet>
   </DataSets>
@@ -484,7 +484,7 @@
                                 </TextRun>
                               </TextRuns>
                               <Style>
-                                <TextAlign>Center</TextAlign>
+                                <TextAlign>Left</TextAlign>
                               </Style>
                             </Paragraph>
                           </Paragraphs>
@@ -500,6 +500,7 @@
                             <PaddingBottom>2pt</PaddingBottom>
                           </Style>
                         </Textbox>
+                        <rd:Selected>true</rd:Selected>
                       </CellContents>
                     </TablixCell>
                     <TablixCell>
@@ -519,7 +520,7 @@
                                 </TextRun>
                               </TextRuns>
                               <Style>
-                                <TextAlign>Center</TextAlign>
+                                <TextAlign>Left</TextAlign>
                               </Style>
                             </Paragraph>
                           </Paragraphs>
@@ -535,6 +536,7 @@
                             <PaddingBottom>2pt</PaddingBottom>
                           </Style>
                         </Textbox>
+                        <rd:Selected>true</rd:Selected>
                       </CellContents>
                     </TablixCell>
                     <TablixCell>
@@ -5741,7 +5743,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=Sum(Fields!kolom1.Value, "datasetjumlahpengiriman")</Value>
+                                  <Value>=Sum(Fields!kolom1.Value, "datasetjumlahperbaikan")</Value>
                                   <Style>
                                     <FontFamily>Segoe UI</FontFamily>
                                     <FontSize>7pt</FontSize>
@@ -5778,7 +5780,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=Sum(Fields!kolom2.Value, "datasetjumlahpengiriman")</Value>
+                                  <Value>=Sum(Fields!kolom2.Value, "datasetjumlahperbaikan")</Value>
                                   <Style>
                                     <FontFamily>Segoe UI</FontFamily>
                                     <FontSize>7pt</FontSize>
@@ -5815,7 +5817,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=Sum(Fields!kolom3.Value, "datasetjumlahpengiriman")</Value>
+                                  <Value>=Sum(Fields!kolom3.Value, "datasetjumlahperbaikan")</Value>
                                   <Style>
                                     <FontFamily>Segoe UI</FontFamily>
                                     <FontSize>7pt</FontSize>
@@ -5852,7 +5854,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=Sum(Fields!kolom4.Value, "datasetjumlahpengiriman")</Value>
+                                  <Value>=Sum(Fields!kolom4.Value, "datasetjumlahperbaikan")</Value>
                                   <Style>
                                     <FontFamily>Segoe UI</FontFamily>
                                     <FontSize>7pt</FontSize>
@@ -5889,7 +5891,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=Sum(Fields!kolom5.Value, "datasetjumlahpengiriman")</Value>
+                                  <Value>=Sum(Fields!kolom5.Value, "datasetjumlahperbaikan")</Value>
                                   <Style>
                                     <FontFamily>Segoe UI</FontFamily>
                                     <FontSize>7pt</FontSize>
@@ -5926,7 +5928,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=Sum(Fields!kolom6.Value, "datasetjumlahpengiriman")</Value>
+                                  <Value>=Sum(Fields!kolom6.Value, "datasetjumlahperbaikan")</Value>
                                   <Style>
                                     <FontFamily>Segoe UI</FontFamily>
                                     <FontSize>7pt</FontSize>
@@ -5963,7 +5965,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=Sum(Fields!kolom7.Value, "datasetjumlahpengiriman")</Value>
+                                  <Value>=Sum(Fields!kolom7.Value, "datasetjumlahperbaikan")</Value>
                                   <Style>
                                     <FontFamily>Segoe UI</FontFamily>
                                     <FontSize>7pt</FontSize>
@@ -6000,7 +6002,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=Sum(Fields!kolom8.Value, "datasetjumlahpengiriman")</Value>
+                                  <Value>=Sum(Fields!kolom8.Value, "datasetjumlahperbaikan")</Value>
                                   <Style>
                                     <FontFamily>Segoe UI</FontFamily>
                                     <FontSize>7pt</FontSize>
@@ -6037,7 +6039,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=Sum(Fields!kolom9.Value, "datasetjumlahpengiriman")</Value>
+                                  <Value>=Sum(Fields!kolom9.Value, "datasetjumlahperbaikan")</Value>
                                   <Style>
                                     <FontFamily>Segoe UI</FontFamily>
                                     <FontSize>7pt</FontSize>
@@ -6074,7 +6076,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=Sum(Fields!kolom10.Value, "datasetjumlahpengiriman")</Value>
+                                  <Value>=Sum(Fields!kolom10.Value, "datasetjumlahperbaikan")</Value>
                                   <Style>
                                     <FontFamily>Segoe UI</FontFamily>
                                     <FontSize>7pt</FontSize>
@@ -6111,7 +6113,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=Sum(Fields!kolom11.Value, "datasetjumlahpengiriman")</Value>
+                                  <Value>=Sum(Fields!kolom11.Value, "datasetjumlahperbaikan")</Value>
                                   <Style>
                                     <FontFamily>Segoe UI</FontFamily>
                                     <FontSize>7pt</FontSize>
@@ -6148,7 +6150,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=Sum(Fields!kolom12.Value, "datasetjumlahpengiriman")</Value>
+                                  <Value>=Sum(Fields!kolom12.Value, "datasetjumlahperbaikan")</Value>
                                   <Style>
                                     <FontFamily>Segoe UI</FontFamily>
                                     <FontSize>7pt</FontSize>
@@ -6185,7 +6187,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=Sum(Fields!kolom13.Value, "datasetjumlahpengiriman")</Value>
+                                  <Value>=Sum(Fields!kolom13.Value, "datasetjumlahperbaikan")</Value>
                                   <Style>
                                     <FontFamily>Segoe UI</FontFamily>
                                     <FontSize>7pt</FontSize>
@@ -6222,7 +6224,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=Sum(Fields!kolom14.Value, "datasetjumlahpengiriman")</Value>
+                                  <Value>=Sum(Fields!kolom14.Value, "datasetjumlahperbaikan")</Value>
                                   <Style>
                                     <FontFamily>Segoe UI</FontFamily>
                                     <FontSize>7pt</FontSize>
@@ -6259,7 +6261,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=Sum(Fields!kolom15.Value, "datasetjumlahpengiriman")</Value>
+                                  <Value>=Sum(Fields!kolom15.Value, "datasetjumlahperbaikan")</Value>
                                   <Style>
                                     <FontFamily>Segoe UI</FontFamily>
                                     <FontSize>7pt</FontSize>
@@ -6296,7 +6298,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=Sum(Fields!kolom16.Value, "datasetjumlahpengiriman")</Value>
+                                  <Value>=Sum(Fields!kolom16.Value, "datasetjumlahperbaikan")</Value>
                                   <Style>
                                     <FontFamily>Segoe UI</FontFamily>
                                     <FontSize>7pt</FontSize>
@@ -6333,7 +6335,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=Sum(Fields!kolom17.Value, "datasetjumlahpengiriman")</Value>
+                                  <Value>=Sum(Fields!kolom17.Value, "datasetjumlahperbaikan")</Value>
                                   <Style>
                                     <FontFamily>Segoe UI</FontFamily>
                                     <FontSize>7pt</FontSize>
@@ -6370,7 +6372,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=Sum(Fields!kolom18.Value, "datasetjumlahpengiriman")</Value>
+                                  <Value>=Sum(Fields!kolom18.Value, "datasetjumlahperbaikan")</Value>
                                   <Style>
                                     <FontFamily>Segoe UI</FontFamily>
                                     <FontSize>7pt</FontSize>
@@ -6407,7 +6409,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=Sum(Fields!kolom19.Value, "datasetjumlahpengiriman")</Value>
+                                  <Value>=Sum(Fields!kolom19.Value, "datasetjumlahperbaikan")</Value>
                                   <Style>
                                     <FontFamily>Segoe UI</FontFamily>
                                     <FontSize>7pt</FontSize>
@@ -6444,7 +6446,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=Sum(Fields!kolom20.Value, "datasetjumlahpengiriman")</Value>
+                                  <Value>=Sum(Fields!kolom20.Value, "datasetjumlahperbaikan")</Value>
                                   <Style>
                                     <FontFamily>Segoe UI</FontFamily>
                                     <FontSize>7pt</FontSize>
@@ -6481,7 +6483,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=Sum(Fields!kolom21.Value, "datasetjumlahpengiriman")</Value>
+                                  <Value>=Sum(Fields!kolom21.Value, "datasetjumlahperbaikan")</Value>
                                   <Style>
                                     <FontFamily>Segoe UI</FontFamily>
                                     <FontSize>7pt</FontSize>
@@ -6518,7 +6520,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=Sum(Fields!kolom22.Value, "datasetjumlahpengiriman")</Value>
+                                  <Value>=Sum(Fields!kolom22.Value, "datasetjumlahperbaikan")</Value>
                                   <Style>
                                     <FontFamily>Segoe UI</FontFamily>
                                     <FontSize>7pt</FontSize>
@@ -6555,7 +6557,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=Sum(Fields!kolom23.Value, "datasetjumlahpengiriman")</Value>
+                                  <Value>=Sum(Fields!kolom23.Value, "datasetjumlahperbaikan")</Value>
                                   <Style>
                                     <FontFamily>Segoe UI</FontFamily>
                                     <FontSize>7pt</FontSize>
@@ -6592,7 +6594,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=Sum(Fields!kolom24.Value, "datasetjumlahpengiriman")</Value>
+                                  <Value>=Sum(Fields!kolom24.Value, "datasetjumlahperbaikan")</Value>
                                   <Style>
                                     <FontFamily>Segoe UI</FontFamily>
                                     <FontSize>7pt</FontSize>
@@ -6629,7 +6631,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=Sum(Fields!kolom25.Value, "datasetjumlahpengiriman")</Value>
+                                  <Value>=Sum(Fields!kolom25.Value, "datasetjumlahperbaikan")</Value>
                                   <Style>
                                     <FontFamily>Segoe UI</FontFamily>
                                     <FontSize>7pt</FontSize>
@@ -6666,7 +6668,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=Sum(Fields!kolom26.Value, "datasetjumlahpengiriman")</Value>
+                                  <Value>=Sum(Fields!kolom26.Value, "datasetjumlahperbaikan")</Value>
                                   <Style>
                                     <FontFamily>Segoe UI</FontFamily>
                                     <FontSize>7pt</FontSize>
@@ -6703,7 +6705,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=Sum(Fields!kolom27.Value, "datasetjumlahpengiriman")</Value>
+                                  <Value>=Sum(Fields!kolom27.Value, "datasetjumlahperbaikan")</Value>
                                   <Style>
                                     <FontFamily>Segoe UI</FontFamily>
                                     <FontSize>7pt</FontSize>
@@ -6740,7 +6742,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=Sum(Fields!kolom28.Value, "datasetjumlahpengiriman")</Value>
+                                  <Value>=Sum(Fields!kolom28.Value, "datasetjumlahperbaikan")</Value>
                                   <Style>
                                     <FontFamily>Segoe UI</FontFamily>
                                     <FontSize>7pt</FontSize>
@@ -6777,7 +6779,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=Sum(Fields!kolom29.Value, "datasetjumlahpengiriman")</Value>
+                                  <Value>=Sum(Fields!kolom29.Value, "datasetjumlahperbaikan")</Value>
                                   <Style>
                                     <FontFamily>Segoe UI</FontFamily>
                                     <FontSize>7pt</FontSize>
@@ -6814,7 +6816,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=Sum(Fields!kolom30.Value, "datasetjumlahpengiriman")</Value>
+                                  <Value>=Sum(Fields!kolom30.Value, "datasetjumlahperbaikan")</Value>
                                   <Style>
                                     <FontFamily>Segoe UI</FontFamily>
                                     <FontSize>7pt</FontSize>
@@ -6851,7 +6853,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=Sum(Fields!Total.Value, "datasetjumlahpengiriman")</Value>
+                                  <Value>=Sum(Fields!Total.Value, "datasetjumlahperbaikan")</Value>
                                   <Style>
                                     <FontFamily>Segoe UI</FontFamily>
                                     <FontSize>8pt</FontSize>
@@ -6931,7 +6933,7 @@
                 </TablixMember>
               </TablixMembers>
             </TablixRowHierarchy>
-            <DataSetName>datasetjumlahpengiriman</DataSetName>
+            <DataSetName>datasetjumlahperbaikan</DataSetName>
             <Top>1.60645cm</Top>
             <Left>0.36366cm</Left>
             <Height>1.2cm</Height>
